[package]
name = "pod-compose"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
blake3 = "0.3"
crossterm = "0.17"
ignore = "0.4"
log = "0.4"
number_prefix = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
tar = "0.4"
tempfile = "3.1"
varlink = "10.0"

podman-varlink = { path = "../podman-varlink" }
