[package]
name = "pod"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.8"
structopt = "0.3"
varlink = "10"

podman-varlink = { path = "../podman-varlink" }

[build-dependencies]
varlink_generator = "9"
