[package]
name = "podman-varlink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
varlink = "10.0"

[build-dependencies]
varlink_generator = "9.0"
